# demo

git/: Cargo.toml
git/src/: main.rs
web/: .env  Cargo.toml
web/src/: main.rs
web/src/entities/: abc.rs  mod.rs  prelude.rs  users.rs
web/src/service/: db.rs  hk.rs  mod.rs
web/web/: pnpm-lock.yaml  vite.config.ts
web/web/src/: App.tsx
