[package]
name = "rust-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.273.0"
git2 = "0.18.1"
libloading = "0.8.3"
rust-embed = "8.2.0"
xxhash-rust = { version = "0.8.12", features = ["xxh3", "const_xxh3"] }

[profile.release]
opt-level = 3
