[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
axum = { version = "0.7.5", features = ["http2"] }
env_logger = "0.11.3"
hyper = { version = "1.3.1", features = ["full"] }
libloading = "0.7"
log = "0.4.21"
mime_guess = "2.0.4"
num_cpus = "1.16.0"
rayon = "1.10.0"
rust-embed = "8.4.0"
sea-orm = { version = "=1.0.0-rc.5", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
] }
serde = "1.0.203"
time = { version = "0.3.36", features = ["macros"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["local-time"] }
